# marktplaats_scraper

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
API/: concept_2_response.csv  main.py  request_item.py  telegram_bot.py
HTML/: advertentie.html  bids.py  test.py  v1.py
jobs/: api.py  channel.py  listings.py  telegram.py
jobs/config/: config.yml  core.py
jobs/datasets/API/: item.json  response.json
jobs/datasets/channels/: 1001797708509.csv
jobs/processing/: __init__.py
logs/: info.log.1  info.log.2
marktplaats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
newItems/: api_test.py  buzzer.py  buzzer_pas.py  f.py  log_file_handler.py  login.py  main.py  out1.html  request.py  request_item.py  run_log.csv  run_log.py  send_message.py  telegram_bot.py
newItems/history/: Session 1.session  analyze_messages.py  get_messages.py  messages.csv  messages_cat.csv  session_id.session  smooth.py
pull/: data.json  get_bids.py  get_response.py  item.html  items_3.csv  items_6.csv  items_9.csv  main.py
requirements/: requirements.txt  test_requirements.txt
